src/objects/Points_Rule_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>For Date fields use the format dd/MM/yyyy
For Date/Time fields use the format dd/MM/yyyy hh:mm:ss, with 24 hour military time</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Points_Rule__c</fullName>
        <label>Points Rule</label>
        <referenceTo>Points_Rule__c</referenceTo>
        <relationshipLabel>Points Rule Criteria</relationshipLabel>
        <relationshipName>Points_Rule_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Points Rule Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Points_Rule__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Operator__c</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Points Rule Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points Rule Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>